# GLFW-Game

./: .gitignore  CMakeLists.txt
common/: GL_utilities.c  GL_utilities.h  LittleOBJLoader.h  LoadTGA.c
include/: game.hpp
include/glad/: glad.h
models/: road.txt  tree02.mtl
src/: game.cpp  glad.c  main.cpp
